--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,9 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.12)
 
-find_package(LLVM REQUIRED CONFIG)
-add_definitions(${LLVM_DEFINITIONS})
+project(input-dependency-analyzer VERSION 0.1 LANGUAGES CXX)
 
-include_directories(${LLVM_INCLUDE_DIRS})
-include_directories(${CMAKE_CURRENT_LIST_DIR})
-
-link_directories(${LLVM_LIBRARY_DIRS})
-link_directories(${CMAKE_CURRENT_BINARY_DIR})
-
-find_package(PkgConfig REQUIRED)
-include_directories(${CMAKE_CURRENT_LIST_DIR}/json)
+set(JSON_BuildTests OFF)
+add_subdirectory(json)
 
 set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG")
@@ -22,3 +15,6 @@ add_subdirectory(Analysis)  # Use your pass name here.
 add_subdirectory(Transforms)  # Use your pass name here.
 #add_subdirectory(OH)  # Use your pass name here.
 #add_subdirectory(CutVertice)  # Use your pass name here.
+
+add_library(input-dependency-analyzer::Transforms ALIAS Transforms)
+add_library(input-dependency-analyzer::InputDependency ALIAS InputDependency)
