--- a/Transforms/CMakeLists.txt
+++ b/Transforms/CMakeLists.txt
@@ -1,33 +1,48 @@
-add_library(Transforms MODULE
-   FunctionClonePass.cpp 
-   FunctionClone.cpp
-   FunctionExtraction.cpp
-   FunctionSnippet.cpp
-   Utils.cpp
-#   InputDepTest.cpp
-)
+cmake_minimum_required(VERSION 3.12)
+
+add_library(Transforms SHARED
+        FunctionClone.h
+        FunctionClonePass.h
+        FunctionExtraction.h
+        FunctionSnippet.h
+        Utils.h
+
+        FunctionClonePass.cpp
+        FunctionClone.cpp
+        FunctionExtraction.cpp
+        FunctionSnippet.cpp
+        Utils.cpp
+        )
+
+find_package(LLVM 6.0 REQUIRED CONFIG)
+target_include_directories(Transforms
+        PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>
+        $<INSTALL_INTERFACE:include>
+        PRIVATE
+        ${LLVM_INCLUDE_DIRS})
+
+if ($ENV{CLION_IDE})
+    include_directories("/usr/include/llvm-6.0/")
+    include_directories("/usr/include/llvm-c-6.0/")
+endif ()
+
+target_link_libraries(Transforms PRIVATE input-dependency-analyzer::InputDependency)
+
+target_compile_features(Transforms PRIVATE cxx_std_17)
+
+target_compile_options(Transforms PRIVATE -fno-rtti)
 
 install(DIRECTORY ./ DESTINATION /usr/local/include/input-dependency
         FILES_MATCHING PATTERN "*.h")
 install(TARGETS Transforms LIBRARY DESTINATION /usr/local/lib)
 
-link_directories(analysis)
-
-# Use C++11 to compile our pass (i.e., supply -std=c++11).
-target_compile_features(Transforms PRIVATE cxx_range_for cxx_auto_type)
-target_link_libraries(Transforms "${LIBRARY_OUTPUT_PATH}/libInputDependency.so")
-
-# LLVM is (typically) built with no C++ RTTI. We need to match that;
-# otherwise, we'll get linker errors about missing RTTI data.
-set_target_properties(Transforms PROPERTIES
-    COMPILE_FLAGS "-fno-rtti -g"
-)
 
 # Get proper shared-library behavior (where symbols are not necessarily
 # resolved when the shared library is linked) on OS X.
-if(APPLE)
+if (APPLE)
     set_target_properties(Transforms PROPERTIES
             LINK_FLAGS "-undefined dynamic_lookup"
             )
-endif(APPLE)
+endif (APPLE)
 
